--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,9 +27,51 @@
     <script th:src="@{/js/components/pagination.js}"></script>
     <script th:src="@{/js/core/dropdown.js}"></script>
     <script th:src="@{/js/components/upload.js}"></script>
+    <style>
+        .loading-content {
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            z-index: 9;
+            background-color:#1D1B1F;
+            display:none;
+        }
 
+        .loading-img {
+            width: 100%;
+            padding-left: 10%;
+            padding-right: 10%;
+        }
+
+        @media (min-width: 0px) {
+            .loading-img {
+                padding-top: 50%;
+            }
+        }
+
+        @media (min-width: 480px) {
+            .loading-img {
+                padding-top: 20%;
+            }
+        }
+
+        @media (min-width: 760px) {
+            .loading-img {
+                padding-top: 10%;
+            }
+        }
+
+        @media (min-width: 960px) {
+            .loading-img {
+                padding-top: 0%;
+            }
+        }
+    </style>
 </head>
 <body>
+<div class="loading-content">
+    <img class="loading-img" th:src="@{/img/loading.gif}"/>
+</div>
 <header th:replace="fragments/header :: header">
     <p>This is default header area for default layout</p>
 </header>
