--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,6 +26,7 @@
     <script th:src="@{/js/core/nav.min.js}"></script>
     <script th:src="@{/js/components/pagination.js}"></script>
     <script th:src="@{/js/core/dropdown.js}"></script>
+    <script th:src="@{/js/components/slideset.js}"></script>
     <script th:src="@{/js/components/upload.js}"></script>
     <style>
         .loading-content {
