--- a/src/main/resources/templates/pages/main.html
+++ b/src/main/resources/templates/pages/main.html
@@ -25,6 +25,12 @@
             padding-left: 10px;
             padding-right: 10px;
         }
+
+        @media (min-width: 1220px) {
+            .uk-grid>* {
+                padding-left: 20px;
+            }
+        }
     </style>
 </head>
 <body layout:fragment="content">
@@ -35,8 +41,30 @@
 
     <div class="uk-grid">
 
-        <div id="tm-right-section" class="uk-width-large-1-1 uk-width-medium-1-1"  data-uk-scrollspy="{cls:'uk-animation-fade', target:'img'}">
-            <div id="uk-grid" class="uk-grid-width-small-1-3, uk-grid-width-medium-1-4 uk-grid-width-large-1-5"  >
+        <div id="tm-right-section" class="uk-width-large-1-1 uk-width-medium-1-1 uk-width-small-1-1"  data-uk-scrollspy="{cls:'uk-animation-fade', target:'img'}">
+            <div style="padding-bottom: 40px;">
+                <caption th:if="${not #lists.isEmpty(videoLogs)}"><h2>최근본영상</h2></caption>
+                <div class="uk-margin" data-uk-slideset="{small: 3, medium: 4, large: 5, autoplay:true, animation:'slide-bottom'}">
+                    <div class="uk-slidenav-position uk-margin">
+                        <ul class="uk-slideset uk-grid uk-flex-center">
+                            <li th:each="log, index : ${videoLogs}" th:style="${index.count > 5 ? 'display:none;' : ''}">
+                                <div class="uk-overlay uk-overlay-hover" style="width:100%; height:300px;">
+                                    <img class="cover-img" alt="Image" th:src="@{'/viewer/image/'+${log.videosEntity.video_seq}}"/>
+                                    <div class="uk-overlay-panel uk-overlay-fade uk-overlay-background  uk-overlay-icon"></div>
+                                    <a class="uk-position-cover" th:href="@{'/media/slist/'+${log.videosEntity.video_seq}}"></a>
+                                </div>
+                                <div class="uk-panel" >
+                                    <h5 class="uk-panel-title" th:text="${log.videosEntity.title3}"></h5>
+                                </div>
+                            </li>
+                        </ul>
+                        <a href="#" class="uk-slidenav uk-slidenav-contrast uk-slidenav-previous" data-uk-slideset-item="previous"></a>
+                        <a href="#" class="uk-slidenav uk-slidenav-next uk-slidenav-contrast" data-uk-slideset-item="next"></a>
+                    </div>
+                </div>
+            </div>
+
+            <div id="uk-grid" class="uk-grid-width-1-1 uk-grid-width-large-1-5 uk-grid-width-medium-1-4 uk-grid-width-small-1-3">
                 <div class="view" th:each="videoKind, index : ${videoKinds}" th:id="@{''+paging-+''+${index.count}}" th:attr="video-kind-seq=${videoKind.video_kind_seq}">
                     <div class="uk-overlay uk-overlay-hover" style="width:100%; height:300px;">
                         <img class="cover-img" alt="Image" th:src="@{'/viewer/cover/'+${videoKind.video_kind_seq}}"/>
