--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -19,21 +19,11 @@
                     </div>
                 </div>
             </div>
-            <script>
-                $('.uk-dropdown-btn').click(function() {
-                    var display = $('.uk-dropdown-content').css('display');
-                    if(display == 'block') {
-                        $('.uk-dropdown-content').css('display', 'none');
-                    } else {
-                        $('.uk-dropdown-content').css('display', 'block');
-                    }
-                })
-            </script>
             <a href="#offcanvas" class="uk-navbar-toggle uk-visible-small uk-icon-medium" data-uk-offcanvas="data-uk-offcanvas"></a>
             <div class="uk-navbar-flip uk-visible-small">
                 <a href="#offcanvas" class="uk-navbar-toggle uk-navbar-toggle-alt uk-icon-medium" data-uk-offcanvas="data-uk-offcanvas"></a>
             </div>
-            <div class="uk-navbar-brand uk-navbar-center uk-visible-small"><i class="uk-icon-small uk-text-primary uk-margin-small-right uk-icon-play-circle"></i> Webflix</div>
+            <div class="uk-navbar-brand uk-navbar-center uk-visible-small"><a class="uk-navbar-brand" href="/"><i class="uk-icon-small uk-text-primary uk-margin-small-right uk-icon-play-circle"></i> Webflix</a></div>
         </div>
     </nav>
     <nav class="uk-navbar uk-navbar-secondary  uk-hidden-small">
