--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -58,25 +58,25 @@
                 <li><a href="#">추천</a></li>
                 <li><a href="/menu/영화">영화</a></li>
                 <li><a href="/menu/드라마">드라마</a></li>
-                <li class="uk-parent" data-uk-dropdown="data-uk-dropdown">
-                    <a href="#">장르 <i class="uk-icon-angle-down uk-margin-small-left"></i></a>
-                    <div class="uk-dropdown uk-dropdown-navbar">
-                        <ul class="uk-nav uk-nav-navbar">
-                            <li><a href="/menu/판타지">판타지</a></li>
-                            <li><a href="/menu/애니">애니</a> </li>
-                            <li><a href="/menu/SF">SF</a> </li>
-                            <li><a href="/menu/어드벤쳐">어드벤쳐</a> </li>
-                            <li><a href="/menu/코믹">코믹</a> </li>
-                            <li><a href="/menu/스릴러">스릴러</a> </li>
-                            <li><a href="/menu/로맨스">로맨스</a> </li>
-                            <li><a href="/menu/범죄">범죄</a> </li>
-                        </ul>
-                    </div>
+                <li>
+                    <a id="genreBtn" href="#">장르 <i class="uk-icon-angle-down uk-margin-small-left"></i></a>
+                    <ul class="uk-nav-sub uk-hidden" style="margin-left: 20px;">
+                        <li><a href="/menu/판타지">판타지</a></li>
+                        <li><a href="/menu/애니">애니</a> </li>
+                        <li><a href="/menu/SF">SF</a> </li>
+                        <li><a href="/menu/어드벤쳐">어드벤쳐</a> </li>
+                        <li><a href="/menu/코미디">코미디</a> </li>
+                        <li><a href="/menu/스릴러">스릴러</a> </li>
+                        <li><a href="/menu/로맨스">로맨스</a> </li>
+                        <li><a href="/menu/범죄">범죄</a> </li>
+                    </ul>
                 </li>
+                <script>
+                    $('#genreBtn').click(function() {
+                        $('.uk-nav-sub').toggleClass('uk-hidden');
+                    })
+                </script>
             </ul>
-            <div class="uk-panel uk-text-center">
-
-            </div>
         </div>
     </div>
 
